--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,21 +11,4 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
 Imports: 
-    dplyr,
-    plyr,
-    purrr,
-    readr,
-    stats,
-    stringr,
-    tibble,
-    tidyr,
-    utils,
-    vvauditor,
-    vvcommander,
-    vvfiller,
-    vvmover
-Remotes:
-    vusaverse/vvauditor,
-    vusaverse/vvcommander,
-    vusaverse/vvfiller,
-    vusaverse/vvmover
+    dplyr
