--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,7 @@
 Package: vvsculptor
 Title: Apply Manipulations To Data Frames
 Version: 0.4.5.9000
-Authors@R: c(
-    person("Hadley", "Wickham", email = "hadley@rstudio.com", role = "cre"),
-    person("Winston", "Chang", email = "winston@rstudio.com", role = "aut"),
-    person("RStudio", role = c("cph", "fnd")))
+Authors@R: person("Tomer", "Iwan", , "t.iwan@vu.nl", role = c("aut", "cre", "cph"))
 Description: This package applies manipulations on data frames based on business rules.
 License: MIT + file LICENSE
 Encoding: UTF-8
