--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: vvsculptor
 Title: Apply Manipulations To Data Frames
-Version: 0.4.6
+Version: 0.4.6.9000
 Authors@R: person("Tomer", "Iwan", , "t.iwan@vu.nl", role = c("aut", "cre", "cph"))
 Description: This package applies manipulations on data frames based on business rules.
+    Futhermore, wrapper functions are created for common tidyverse functions.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
