--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,9 @@
 Package: vvsculptor
 Title: Apply Manipulations to Data Frames
-Version: 0.4.8.9000
+Version: 0.4.9
 Authors@R: person("Tomer", "Iwan", , "t.iwan@vu.nl", role = c("aut", "cre", "cph"))
 Description: Contains function which apply manipulations on data frames based on business rules.
-    Furthermore, wrapper functions are created for common `tidyverse` functions.
+    Furthermore, wrapper functions are created for common 'tidyverse' functions.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
