Increment version number to 0.4.10

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,12 @@
 Package: vvsculptor
 Title: Apply Manipulations to Data Frames
-Version: 0.4.9.9000
+Version: 0.4.10
 Authors@R: person("Tomer", "Iwan", , "t.iwan@vu.nl", role = c("aut", "cre", "cph"))
-Description: Contains function which apply manipulations on data frames based on business rules.
-    Furthermore, wrapper functions are created for common 'tidyverse' functions.
+Description: Provides a set of functions for manipulating data frames in accordance with specific business rules. 
+    In addition, it includes wrapper functions for commonly used functions from the popular 'tidyverse' package, 
+    making it easy to integrate these functions into data analysis workflows. 
+    The package is designed to streamline data preprocessing and help users quickly and efficiently 
+    perform data transformations that are specific to their business needs.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
