--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,4 +12,6 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: 
-    dplyr
+    dplyr,
+    lubridate,
+    magrittr
