--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
+URL: https://vusaverse.github.io/vvsculptor/, https://github.com/vusaverse/vvsculptor
 Imports: 
     dplyr,
     lubridate,
